#127 Fix restoring visible layers